DONE 8. display hint& result on one of the displays? DONE
DONE 9. add tooltips!!! DONE
XX 10. resultObj and set individual results redundant!!??? XX
XX 11. hide result btn until 1 test was run? XX
XX 12. disable 5s timer in the end XX
DONE 13. default results DONE
DONE 14. reset current display immediately after start DONE
DONE 15. placeholder text DONE
DONE 16. typing are get the scroll in the end -> different  font? DONE
DONE 17. timer value styling DONE
DONE 18. btn text not centered? FIrefox only? CSS reset? DONE
? 19. scroll to results if they are not visible?
DONE 20. speed only 1 afer . DONE
?21. transition for results?
?22. implement phase transition?
DONE 23. wikipedia text length display? DONE
DONE 24. what if text is too short DONE
DONE 25. no "..." if case of last part of text DONE
DONE 26. getting rid of text in () [] DONE
DONE 27. getting rid of non-english chars DONE
DONE 28. proper components/state management DONE
DONE 29. more Hints OR put Hints lower? DONE
DONE 30. font for "speed typing app" DONE
DONE 31. change app title? DONE
DONE 32. more components? DONE
DONE. counter - ?functional updating? + notes DONE
DONE 34. App.js 2 useEffects -> currently they share part of logic? => 1 useEffect in the end
DONE 35. typing possible only after fetch is done, no lorem ipsum at the beginning DONE
XX 36. CSS reset? XX
DONE 37. CSS comments DONE
DONE 38. reducer component DONE
XX 38. reg ex lint fix XX  (generated by npm module)
DONE 39. proper App tree in notes.txt DONE
DONE 40. final test
DONE 41. chrome & firefox inconsistencies fixed DONE
DONE 42. merge branches


*/


REDUX_FULLSTACK:

toChange:
1. split reducers in seperate files?
2. toggleHints - change from function to action creator?
3. bar-chart onhover does not work perfectly
4. stats/ top-score naming consistency?
5. stats: no KPM or % if there is no record?
6. stats: tooltips (speed, accuracy)?

(react scripts 3.3.0 => 3.4.0? new npm ver?)
